Package_Tools/include-C/leptonica/inarbeit/fertig/allheaders.h

 extern PIX * pixBilinearSampledPta ( PIX *pixs, PTA *ptad, PTA *ptas, l_int32 incolor );
 extern PIX * pixBilinearSampled ( PIX *pixs, l_float32 *vc, l_int32 incolor );
 extern PIX * pixBilinearPta ( PIX *pixs, PTA *ptad, PTA *ptas, l_int32 incolor );
 extern PIX * pixBilinear ( PIX *pixs, l_float32 *vc, l_int32 incolor );
 extern PIX * pixBilinearPtaColor ( PIX *pixs, PTA *ptad, PTA *ptas, l_uint32 colorval );
 extern PIX * pixBilinearColor ( PIX *pixs, l_float32 *vc, l_uint32 colorval );
 extern PIX * pixBilinearPtaGray ( PIX *pixs, PTA *ptad, PTA *ptas, l_uint8 grayval );
 extern PIX * pixBilinearGray ( PIX *pixs, l_float32 *vc, l_uint8 grayval );
 extern PIX * pixBilinearPtaWithAlpha ( PIX *pixs, PTA *ptad, PTA *ptas, PIX *pixg, l_float32 fract, l_int32 border );
 extern l_ok getBilinearXformCoeffs ( PTA *ptas, PTA *ptad, l_float32 **pvc );
 extern l_ok bilinearXformSampledPt ( l_float32 *vc, l_int32 x, l_int32 y, l_int32 *pxp, l_int32 *pyp );
 extern l_ok bilinearXformPt ( l_float32 *vc, l_int32 x, l_int32 y, l_float32 *pxp, l_float32 *pyp );
 extern l_ok pixOtsuAdaptiveThreshold ( PIX *pixs, l_int32 sx, l_int32 sy, l_int32 smoothx, l_int32 smoothy, l_float32 scorefract, PIX **ppixth, PIX **ppixd );
 extern PIX * pixOtsuThreshOnBackgroundNorm ( PIX *pixs, PIX *pixim, l_int32 sx, l_int32 sy, l_int32 thresh, l_int32 mincount, l_int32 bgval, l_int32 smoothx, l_int32 smoothy, l_float32 scorefract, l_int32 *pthresh );
 extern PIX * pixMaskedThreshOnBackgroundNorm ( PIX *pixs, PIX *pixim, l_int32 sx, l_int32 sy, l_int32 thresh, l_int32 mincount, l_int32 smoothx, l_int32 smoothy, l_float32 scorefract, l_int32 *pthresh );
 extern l_ok pixSauvolaBinarizeTiled ( PIX *pixs, l_int32 whsize, l_float32 factor, l_int32 nx, l_int32 ny, PIX **ppixth, PIX **ppixd );
 extern l_ok pixSauvolaBinarize ( PIX *pixs, l_int32 whsize, l_float32 factor, l_int32 addborder, PIX **ppixm, PIX **ppixsd, PIX **ppixth, PIX **ppixd );
 extern PIX * pixSauvolaOnContrastNorm ( PIX *pixs, l_int32 mindiff, PIX **ppixn, PIX **ppixth );
 extern PIX * pixThreshOnDoubleNorm ( PIX *pixs, l_int32 mindiff );
 extern l_ok pixThresholdByConnComp ( PIX *pixs, PIX *pixm, l_int32 start, l_int32 end, l_int32 incr, l_float32 thresh48, l_float32 threshdiff, l_int32 *pglobthresh, PIX **ppixd, l_int32 debugflag );
 extern l_ok pixThresholdByHisto ( PIX *pixs, l_int32 factor, l_int32 halfw, l_float32 delta, l_int32 *pthresh, PIX **ppixd, PIX **ppixhisto );
 extern PIX * pixExpandBinaryReplicate ( PIX *pixs, l_int32 xfact, l_int32 yfact );
 extern PIX * pixExpandBinaryPower2 ( PIX *pixs, l_int32 factor );
 extern PIX * pixReduceBinary2 ( PIX *pixs, l_uint8 *intab );
 extern PIX * pixReduceRankBinaryCascade ( PIX *pixs, l_int32 level1, l_int32 level2, l_int32 level3, l_int32 level4 );
 extern PIX * pixReduceRankBinary2 ( PIX *pixs, l_int32 level, l_uint8 *intab );
 extern l_uint8 * makeSubsampleTab2x ( void );
 extern PIX * pixBlend ( PIX *pixs1, PIX *pixs2, l_int32 x, l_int32 y, l_float32 fract );
 extern PIX * pixBlendMask ( PIX *pixd, PIX *pixs1, PIX *pixs2, l_int32 x, l_int32 y, l_float32 fract, l_int32 type );
 extern PIX * pixBlendGray ( PIX *pixd, PIX *pixs1, PIX *pixs2, l_int32 x, l_int32 y, l_float32 fract, l_int32 type, l_int32 transparent, l_uint32 transpix );
 extern PIX * pixBlendGrayInverse ( PIX *pixd, PIX *pixs1, PIX *pixs2, l_int32 x, l_int32 y, l_float32 fract );
 extern PIX * pixBlendColor ( PIX *pixd, PIX *pixs1, PIX *pixs2, l_int32 x, l_int32 y, l_float32 fract, l_int32 transparent, l_uint32 transpix );
 extern PIX * pixBlendColorByChannel ( PIX *pixd, PIX *pixs1, PIX *pixs2, l_int32 x, l_int32 y, l_float32 rfract, l_float32 gfract, l_float32 bfract, l_int32 transparent, l_uint32 transpix );
 extern PIX * pixBlendGrayAdapt ( PIX *pixd, PIX *pixs1, PIX *pixs2, l_int32 x, l_int32 y, l_float32 fract, l_int32 shift );
 extern PIX * pixFadeWithGray ( PIX *pixs, PIX *pixb, l_float32 factor, l_int32 type );
 extern PIX * pixBlendHardLight ( PIX *pixd, PIX *pixs1, PIX *pixs2, l_int32 x, l_int32 y, l_float32 fract );
 extern l_ok pixBlendCmap ( PIX *pixs, PIX *pixb, l_int32 x, l_int32 y, l_int32 sindex );
 extern PIX * pixBlendWithGrayMask ( PIX *pixs1, PIX *pixs2, PIX *pixg, l_int32 x, l_int32 y );
 extern PIX * pixBlendBackgroundToColor ( PIX *pixd, PIX *pixs, BOX *box, l_uint32 color, l_float32 gamma, l_int32 minval, l_int32 maxval );
 extern PIX * pixMultiplyByColor ( PIX *pixd, PIX *pixs, BOX *box, l_uint32 color );
 extern PIX * pixAlphaBlendUniform ( PIX *pixs, l_uint32 color );
 extern PIX * pixAddAlphaToBlend ( PIX *pixs, l_float32 fract, l_int32 invert );
 extern PIX * pixSetAlphaOverWhite ( PIX *pixs );
 extern l_ok pixLinearEdgeFade ( PIX *pixs, l_int32 dir, l_int32 fadeto, l_float32 distfract, l_float32 maxfade );
 extern L_BMF * bmfCreate ( const char *dir, l_int32 fontsize );
 extern void bmfDestroy ( L_BMF **pbmf );
 extern PIX * bmfGetPix ( L_BMF *bmf, char chr );
 extern l_ok bmfGetWidth ( L_BMF *bmf, char chr, l_int32 *pw );
 extern l_ok bmfGetBaseline ( L_BMF *bmf, char chr, l_int32 *pbaseline );
 extern PIXA * pixaGetFont ( const char *dir, l_int32 fontsize, l_int32 *pbl0, l_int32 *pbl1, l_int32 *pbl2 );
 extern l_ok pixaSaveFont ( const char *indir, const char *outdir, l_int32 fontsize );
 extern PIX * pixReadStreamBmp ( FILE *fp );
 extern PIX * pixReadMemBmp ( const l_uint8 *cdata, size_t size );
 extern l_ok pixWriteStreamBmp ( FILE *fp, PIX *pix );
 extern l_ok pixWriteMemBmp ( l_uint8 **pfdata, size_t *pfsize, PIX *pixs );
 extern PIXA * l_bootnum_gen1 ( void );
 extern PIXA * l_bootnum_gen2 ( void );
 extern PIXA * l_bootnum_gen3 ( void );
 extern PIXA * l_bootnum_gen4 ( l_int32 nsamp );
 extern BOX * boxCreate ( l_int32 x, l_int32 y, l_int32 w, l_int32 h );
 extern BOX * boxCreateValid ( l_int32 x, l_int32 y, l_int32 w, l_int32 h );
 extern BOX * boxCopy ( BOX *box );
 extern BOX * boxClone ( BOX *box );
 extern void boxDestroy ( BOX **pbox );
 extern l_ok boxGetGeometry ( BOX *box, l_int32 *px, l_int32 *py, l_int32 *pw, l_int32 *ph );
 extern l_ok boxSetGeometry ( BOX *box, l_int32 x, l_int32 y, l_int32 w, l_int32 h );
 extern l_ok boxGetSideLocations ( BOX *box, l_int32 *pl, l_int32 *pr, l_int32 *pt, l_int32 *pb );
 extern l_ok boxSetSideLocations ( BOX *box, l_int32 l, l_int32 r, l_int32 t, l_int32 b );
 extern l_int32 boxGetRefcount ( BOX *box );
 extern l_ok boxChangeRefcount ( BOX *box, l_int32 delta );
 extern l_ok boxIsValid ( BOX *box, l_int32 *pvalid );
 extern BOXA * boxaCreate ( l_int32 n );
 extern BOXA * boxaCopy ( BOXA *boxa, l_int32 copyflag );
 extern void boxaDestroy ( BOXA **pboxa );
 extern l_ok boxaAddBox ( BOXA *boxa, BOX *box, l_int32 copyflag );
 extern l_ok boxaExtendArray ( BOXA *boxa );
 extern l_ok boxaExtendArrayToSize ( BOXA *boxa, size_t size );
 extern l_int32 boxaGetCount ( BOXA *boxa );
 extern l_int32 boxaGetValidCount ( BOXA *boxa );
 extern BOX * boxaGetBox ( BOXA *boxa, l_int32 index, l_int32 accessflag );
 extern BOX * boxaGetValidBox ( BOXA *boxa, l_int32 index, l_int32 accessflag );
 extern NUMA * boxaFindInvalidBoxes ( BOXA *boxa );
 extern l_ok boxaGetBoxGeometry ( BOXA *boxa, l_int32 index, l_int32 *px, l_int32 *py, l_int32 *pw, l_int32 *ph );
 extern l_ok boxaIsFull ( BOXA *boxa, l_int32 *pfull );
 extern l_ok boxaReplaceBox ( BOXA *boxa, l_int32 index, BOX *box );
 extern l_ok boxaInsertBox ( BOXA *boxa, l_int32 index, BOX *box );
 extern l_ok boxaRemoveBox ( BOXA *boxa, l_int32 index );
 extern l_ok boxaRemoveBoxAndSave ( BOXA *boxa, l_int32 index, BOX **pbox );
 extern BOXA * boxaSaveValid ( BOXA *boxas, l_int32 copyflag );
 extern l_ok boxaInitFull ( BOXA *boxa, BOX *box );
 extern l_ok boxaClear ( BOXA *boxa );
 extern BOXAA * boxaaCreate ( l_int32 n );
 extern BOXAA * boxaaCopy ( BOXAA *baas, l_int32 copyflag );
 extern void boxaaDestroy ( BOXAA **pbaa );
 extern l_ok boxaaAddBoxa ( BOXAA *baa, BOXA *ba, l_int32 copyflag );
 extern l_ok boxaaExtendArray ( BOXAA *baa );
 extern l_ok boxaaExtendArrayToSize ( BOXAA *baa, l_int32 size );
 extern l_int32 boxaaGetCount ( BOXAA *baa );
 extern l_int32 boxaaGetBoxCount ( BOXAA *baa );
 extern BOXA * boxaaGetBoxa ( BOXAA *baa, l_int32 index, l_int32 accessflag );
 extern BOX * boxaaGetBox ( BOXAA *baa, l_int32 iboxa, l_int32 ibox, l_int32 accessflag );
 extern l_ok boxaaInitFull ( BOXAA *baa, BOXA *boxa );
 extern l_ok boxaaExtendWithInit ( BOXAA *baa, l_int32 maxindex, BOXA *boxa );
 extern l_ok boxaaReplaceBoxa ( BOXAA *baa, l_int32 index, BOXA *boxa );
 extern l_ok boxaaInsertBoxa ( BOXAA *baa, l_int32 index, BOXA *boxa );
 extern l_ok boxaaRemoveBoxa ( BOXAA *baa, l_int32 index );
 extern l_ok boxaaAddBox ( BOXAA *baa, l_int32 index, BOX *box, l_int32 accessflag );