Packages_2024/leptonica_1.82.0/lept/allheaders.inc

function pixBilinearSampledPta(pixs: PPIX; ptad: PPTA; ptas: PPTA; incolor: Tl_int32): PPIX; cdecl; external libleptb;
function pixBilinearSampled(pixs: PPIX; vc: Pl_float32; incolor: Tl_int32): PPIX; cdecl; external libleptb;
function pixBilinearPta(pixs: PPIX; ptad: PPTA; ptas: PPTA; incolor: Tl_int32): PPIX; cdecl; external libleptb;
function pixBilinear(pixs: PPIX; vc: Pl_float32; incolor: Tl_int32): PPIX; cdecl; external libleptb;
function pixBilinearPtaColor(pixs: PPIX; ptad: PPTA; ptas: PPTA; colorval: Tl_uint32): PPIX; cdecl; external libleptb;
function pixBilinearColor(pixs: PPIX; vc: Pl_float32; colorval: Tl_uint32): PPIX; cdecl; external libleptb;
function pixBilinearPtaGray(pixs: PPIX; ptad: PPTA; ptas: PPTA; grayval: Tl_uint8): PPIX; cdecl; external libleptb;
function pixBilinearGray(pixs: PPIX; vc: Pl_float32; grayval: Tl_uint8): PPIX; cdecl; external libleptb;
function pixBilinearPtaWithAlpha(pixs: PPIX; ptad: PPTA; ptas: PPTA; pixg: PPIX; fract: Tl_float32;
  border: Tl_int32): PPIX; cdecl; external libleptb;
function getBilinearXformCoeffs(ptas: PPTA; ptad: PPTA; pvc: PPl_float32): Tl_ok; cdecl; external libleptb;
function bilinearXformSampledPt(vc: Pl_float32; x: Tl_int32; y: Tl_int32; pxp: Pl_int32; pyp: Pl_int32): Tl_ok; cdecl; external libleptb;
function bilinearXformPt(vc: Pl_float32; x: Tl_int32; y: Tl_int32; pxp: Pl_float32; pyp: Pl_float32): Tl_ok; cdecl; external libleptb;
function pixOtsuAdaptiveThreshold(pixs: PPIX; sx: Tl_int32; sy: Tl_int32; smoothx: Tl_int32; smoothy: Tl_int32;
  scorefract: Tl_float32; ppixth: PPPIX; ppixd: PPPIX): Tl_ok; cdecl; external libleptb;
function pixOtsuThreshOnBackgroundNorm(pixs: PPIX; pixim: PPIX; sx: Tl_int32; sy: Tl_int32; thresh: Tl_int32;
  mincount: Tl_int32; bgval: Tl_int32; smoothx: Tl_int32; smoothy: Tl_int32; scorefract: Tl_float32;
  pthresh: Pl_int32): PPIX; cdecl; external libleptb;
function pixMaskedThreshOnBackgroundNorm(pixs: PPIX; pixim: PPIX; sx: Tl_int32; sy: Tl_int32; thresh: Tl_int32;
  mincount: Tl_int32; smoothx: Tl_int32; smoothy: Tl_int32; scorefract: Tl_float32; pthresh: Pl_int32): PPIX; cdecl; external libleptb;
function pixSauvolaBinarizeTiled(pixs: PPIX; whsize: Tl_int32; factor: Tl_float32; nx: Tl_int32; ny: Tl_int32;
  ppixth: PPPIX; ppixd: PPPIX): Tl_ok; cdecl; external libleptb;
function pixSauvolaBinarize(pixs: PPIX; whsize: Tl_int32; factor: Tl_float32; addborder: Tl_int32; ppixm: PPPIX;
  ppixsd: PPPIX; ppixth: PPPIX; ppixd: PPPIX): Tl_ok; cdecl; external libleptb;
function pixSauvolaOnContrastNorm(pixs: PPIX; mindiff: Tl_int32; ppixn: PPPIX; ppixth: PPPIX): PPIX; cdecl; external libleptb;
function pixThreshOnDoubleNorm(pixs: PPIX; mindiff: Tl_int32): PPIX; cdecl; external libleptb;
function pixThresholdByConnComp(pixs: PPIX; pixm: PPIX; start: Tl_int32; end_: Tl_int32; incr: Tl_int32;
  thresh48: Tl_float32; threshdiff: Tl_float32; pglobthresh: Pl_int32; ppixd: PPPIX; debugflag: Tl_int32): Tl_ok; cdecl; external libleptb;
function pixThresholdByHisto(pixs: PPIX; factor: Tl_int32; halfw: Tl_int32; delta: Tl_float32; pthresh: Pl_int32;
  ppixd: PPPIX; ppixhisto: PPPIX): Tl_ok; cdecl; external libleptb;
function pixExpandBinaryReplicate(pixs: PPIX; xfact: Tl_int32; yfact: Tl_int32): PPIX; cdecl; external libleptb;
function pixExpandBinaryPower2(pixs: PPIX; factor: Tl_int32): PPIX; cdecl; external libleptb;
function pixReduceBinary2(pixs: PPIX; intab: Pl_uint8): PPIX; cdecl; external libleptb;
function pixReduceRankBinaryCascade(pixs: PPIX; level1: Tl_int32; level2: Tl_int32; level3: Tl_int32; level4: Tl_int32): PPIX; cdecl; external libleptb;
function pixReduceRankBinary2(pixs: PPIX; level: Tl_int32; intab: Pl_uint8): PPIX; cdecl; external libleptb;
function makeSubsampleTab2x: Pl_uint8; cdecl; external libleptb;
function pixBlend(pixs1: PPIX; pixs2: PPIX; x: Tl_int32; y: Tl_int32; fract: Tl_float32): PPIX; cdecl; external libleptb;
function pixBlendMask(pixd: PPIX; pixs1: PPIX; pixs2: PPIX; x: Tl_int32; y: Tl_int32;
  fract: Tl_float32; _type: Tl_int32): PPIX; cdecl; external libleptb;
function pixBlendGray(pixd: PPIX; pixs1: PPIX; pixs2: PPIX; x: Tl_int32; y: Tl_int32;
  fract: Tl_float32; _type: Tl_int32; transparent: Tl_int32; transpix: Tl_uint32): PPIX; cdecl; external libleptb;
function pixBlendGrayInverse(pixd: PPIX; pixs1: PPIX; pixs2: PPIX; x: Tl_int32; y: Tl_int32;
  fract: Tl_float32): PPIX; cdecl; external libleptb;
function pixBlendColor(pixd: PPIX; pixs1: PPIX; pixs2: PPIX; x: Tl_int32; y: Tl_int32;
  fract: Tl_float32; transparent: Tl_int32; transpix: Tl_uint32): PPIX; cdecl; external libleptb;
function pixBlendColorByChannel(pixd: PPIX; pixs1: PPIX; pixs2: PPIX; x: Tl_int32; y: Tl_int32;
  rfract: Tl_float32; gfract: Tl_float32; bfract: Tl_float32; transparent: Tl_int32; transpix: Tl_uint32): PPIX; cdecl; external libleptb;
function pixBlendGrayAdapt(pixd: PPIX; pixs1: PPIX; pixs2: PPIX; x: Tl_int32; y: Tl_int32;
  fract: Tl_float32; shift: Tl_int32): PPIX; cdecl; external libleptb;
function pixFadeWithGray(pixs: PPIX; pixb: PPIX; factor: Tl_float32; _type: Tl_int32): PPIX; cdecl; external libleptb;
function pixBlendHardLight(pixd: PPIX; pixs1: PPIX; pixs2: PPIX; x: Tl_int32; y: Tl_int32;
  fract: Tl_float32): PPIX; cdecl; external libleptb;
function pixBlendCmap(pixs: PPIX; pixb: PPIX; x: Tl_int32; y: Tl_int32; sindex: Tl_int32): Tl_ok; cdecl; external libleptb;
function pixBlendWithGrayMask(pixs1: PPIX; pixs2: PPIX; pixg: PPIX; x: Tl_int32; y: Tl_int32): PPIX; cdecl; external libleptb;
function pixBlendBackgroundToColor(pixd: PPIX; pixs: PPIX; box: PBOX; color: Tl_uint32; gamma: Tl_float32;
  minval: Tl_int32; maxval: Tl_int32): PPIX; cdecl; external libleptb;
function pixMultiplyByColor(pixd: PPIX; pixs: PPIX; box: PBOX; color: Tl_uint32): PPIX; cdecl; external libleptb;
function pixAlphaBlendUniform(pixs: PPIX; color: Tl_uint32): PPIX; cdecl; external libleptb;
function pixAddAlphaToBlend(pixs: PPIX; fract: Tl_float32; invert: Tl_int32): PPIX; cdecl; external libleptb;
function pixSetAlphaOverWhite(pixs: PPIX): PPIX; cdecl; external libleptb;
function pixLinearEdgeFade(pixs: PPIX; dir: Tl_int32; fadeto: Tl_int32; distfract: Tl_float32; maxfade: Tl_float32): Tl_ok; cdecl; external libleptb;
function bmfCreate(dir: pchar; fontsize: Tl_int32): PL_BMF; cdecl; external libleptb;
procedure bmfDestroy(pbmf: PPL_BMF); cdecl; external libleptb;
function bmfGetPix(bmf: PL_BMF; chr: char): PPIX; cdecl; external libleptb;
function bmfGetWidth(bmf: PL_BMF; chr: char; pw: Pl_int32): Tl_ok; cdecl; external libleptb;
function bmfGetBaseline(bmf: PL_BMF; chr: char; pbaseline: Pl_int32): Tl_ok; cdecl; external libleptb;
function pixaGetFont(dir: pchar; fontsize: Tl_int32; pbl0: Pl_int32; pbl1: Pl_int32; pbl2: Pl_int32): PPIXA; cdecl; external libleptb;
function pixaSaveFont(indir: pchar; outdir: pchar; fontsize: Tl_int32): Tl_ok; cdecl; external libleptb;
function pixReadStreamBmp(fp: PFILE): PPIX; cdecl; external libleptb;
function pixReadMemBmp(cdata: Pl_uint8; size: Tsize_t): PPIX; cdecl; external libleptb;
function pixWriteStreamBmp(fp: PFILE; pix: PPIX): Tl_ok; cdecl; external libleptb;
function pixWriteMemBmp(pfdata: PPl_uint8; pfsize: Psize_t; pixs: PPIX): Tl_ok; cdecl; external libleptb;
function l_bootnum_gen1: PPIXA; cdecl; external libleptb;
function l_bootnum_gen2: PPIXA; cdecl; external libleptb;
function l_bootnum_gen3: PPIXA; cdecl; external libleptb;
function l_bootnum_gen4(nsamp: Tl_int32): PPIXA; cdecl; external libleptb;
function boxCreate(x: Tl_int32; y: Tl_int32; w: Tl_int32; h: Tl_int32): PBOX; cdecl; external libleptb;
function boxCreateValid(x: Tl_int32; y: Tl_int32; w: Tl_int32; h: Tl_int32): PBOX; cdecl; external libleptb;
function boxCopy(box: PBOX): PBOX; cdecl; external libleptb;
function boxClone(box: PBOX): PBOX; cdecl; external libleptb;
procedure boxDestroy(pbox: PPBOX); cdecl; external libleptb;
function boxGetGeometry(box: PBOX; px: Pl_int32; py: Pl_int32; pw: Pl_int32; ph: Pl_int32): Tl_ok; cdecl; external libleptb;
function boxSetGeometry(box: PBOX; x: Tl_int32; y: Tl_int32; w: Tl_int32; h: Tl_int32): Tl_ok; cdecl; external libleptb;
function boxGetSideLocations(box: PBOX; pl: Pl_int32; pr: Pl_int32; pt: Pl_int32; pb: Pl_int32): Tl_ok; cdecl; external libleptb;
function boxSetSideLocations(box: PBOX; l: Tl_int32; r: Tl_int32; t: Tl_int32; b: Tl_int32): Tl_ok; cdecl; external libleptb;
function boxGetRefcount(box: PBOX): Tl_int32; cdecl; external libleptb;
function boxChangeRefcount(box: PBOX; delta: Tl_int32): Tl_ok; cdecl; external libleptb;
function boxIsValid(box: PBOX; pvalid: Pl_int32): Tl_ok; cdecl; external libleptb;
function boxaCreate(n: Tl_int32): PBOXA; cdecl; external libleptb;
function boxaCopy(boxa: PBOXA; copyflag: Tl_int32): PBOXA; cdecl; external libleptb;
procedure boxaDestroy(pboxa: PPBOXA); cdecl; external libleptb;
function boxaAddBox(boxa: PBOXA; box: PBOX; copyflag: Tl_int32): Tl_ok; cdecl; external libleptb;
function boxaExtendArray(boxa: PBOXA): Tl_ok; cdecl; external libleptb;
function boxaExtendArrayToSize(boxa: PBOXA; size: Tsize_t): Tl_ok; cdecl; external libleptb;
function boxaGetCount(boxa: PBOXA): Tl_int32; cdecl; external libleptb;
function boxaGetValidCount(boxa: PBOXA): Tl_int32; cdecl; external libleptb;
function boxaGetBox(boxa: PBOXA; index: Tl_int32; accessflag: Tl_int32): PBOX; cdecl; external libleptb;
function boxaGetValidBox(boxa: PBOXA; index: Tl_int32; accessflag: Tl_int32): PBOX; cdecl; external libleptb;
function boxaFindInvalidBoxes(boxa: PBOXA): PNUMA; cdecl; external libleptb;
function boxaGetBoxGeometry(boxa: PBOXA; index: Tl_int32; px: Pl_int32; py: Pl_int32; pw: Pl_int32;
  ph: Pl_int32): Tl_ok; cdecl; external libleptb;
function boxaIsFull(boxa: PBOXA; pfull: Pl_int32): Tl_ok; cdecl; external libleptb;
function boxaReplaceBox(boxa: PBOXA; index: Tl_int32; box: PBOX): Tl_ok; cdecl; external libleptb;
function boxaInsertBox(boxa: PBOXA; index: Tl_int32; box: PBOX): Tl_ok; cdecl; external libleptb;
function boxaRemoveBox(boxa: PBOXA; index: Tl_int32): Tl_ok; cdecl; external libleptb;
function boxaRemoveBoxAndSave(boxa: PBOXA; index: Tl_int32; pbox: PPBOX): Tl_ok; cdecl; external libleptb;
function boxaSaveValid(boxas: PBOXA; copyflag: Tl_int32): PBOXA; cdecl; external libleptb;
function boxaInitFull(boxa: PBOXA; box: PBOX): Tl_ok; cdecl; external libleptb;
function boxaClear(boxa: PBOXA): Tl_ok; cdecl; external libleptb;
function boxaaCreate(n: Tl_int32): PBOXAA; cdecl; external libleptb;
function boxaaCopy(baas: PBOXAA; copyflag: Tl_int32): PBOXAA; cdecl; external libleptb;
procedure boxaaDestroy(pbaa: PPBOXAA); cdecl; external libleptb;
function boxaaAddBoxa(baa: PBOXAA; ba: PBOXA; copyflag: Tl_int32): Tl_ok; cdecl; external libleptb;
function boxaaExtendArray(baa: PBOXAA): Tl_ok; cdecl; external libleptb;
function boxaaExtendArrayToSize(baa: PBOXAA; size: Tl_int32): Tl_ok; cdecl; external libleptb;
function boxaaGetCount(baa: PBOXAA): Tl_int32; cdecl; external libleptb;
function boxaaGetBoxCount(baa: PBOXAA): Tl_int32; cdecl; external libleptb;
function boxaaGetBoxa(baa: PBOXAA; index: Tl_int32; accessflag: Tl_int32): PBOXA; cdecl; external libleptb;
function boxaaGetBox(baa: PBOXAA; iboxa: Tl_int32; ibox: Tl_int32; accessflag: Tl_int32): PBOX; cdecl; external libleptb;
function boxaaInitFull(baa: PBOXAA; boxa: PBOXA): Tl_ok; cdecl; external libleptb;
function boxaaExtendWithInit(baa: PBOXAA; maxindex: Tl_int32; boxa: PBOXA): Tl_ok; cdecl; external libleptb;
function boxaaReplaceBoxa(baa: PBOXAA; index: Tl_int32; boxa: PBOXA): Tl_ok; cdecl; external libleptb;
function boxaaInsertBoxa(baa: PBOXAA; index: Tl_int32; boxa: PBOXA): Tl_ok; cdecl; external libleptb;
function boxaaRemoveBoxa(baa: PBOXAA; index: Tl_int32): Tl_ok; cdecl; external libleptb;
function boxaaAddBox(baa: PBOXAA; index: Tl_int32; box: PBOX; accessflag: Tl_int32): Tl_ok; cdecl; external libleptb;
